--- a/western-digital-webapp/src/mentee_pages/checkHW.css
+++ b/western-digital-webapp/src/mentee_pages/checkHW.css
@@ -510,7 +510,7 @@
   width: 100%;
   overflow-y: auto; /* Enable vertical scrolling */
   overflow-x: hidden; /* Prevent horizontal scrolling */
-  background-color: #ffffff; /* Optional: Set background color */
+  background-color: inherit Im !important; /* Optional: Set background color */
   border-radius: 8px;
   padding: 10px;
   margin-top: 10px;
